Fixed button alignment issue in IE but fix works on all tested browser (FF, GC and IE11).

--- a/EnglishLearners/dev/assets/css/main.css
+++ b/EnglishLearners/dev/assets/css/main.css
@@ -5623,9 +5623,10 @@ button:hover,
 
     .mapControlsContainer #selectDistrictType {
         flex-direction: row;
-        width: unset;
+        width: 100%;
         margin: 0;
         align-items: center;
+        justify-content: flex-end;
     }
 
         .mapControlsContainer #selectDistrictType #selectSecondary {
